Manifest/app/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: irohaboard-deployment
  namespace: irohaboard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: irohaboard
        tier: frontend
    spec:
      containers:
      - name: irohaboard
        image: tksarah/irohaboard:0.9.18
        ports:
        - containerPort: 80
