Manifest/app/service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: irohaboard-service
  namespace: irohaboard
  labels:
    app: irohaboard
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: irohaboard
    tier: frontend
