Manifest/app/service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: irohaboard-service
  namespace: irohaboard
  labels:
    app: irohaboard
spec:
  type: NodePort 
  ports:
  - port: 80
    nodePort: 30080
  selector:
    app: irohaboard
    tier: frontend
